# api/app/controllers/geometry.py
@@ -1,28 +1,30 @@
 import csv
 import os
 import pathlib
-from math import cos, asin, sqrt, pi
+from math import asin, cos, pi, sqrt
 
 import polyline
 
 from controllers.shared import list_hikes
 
-coord_filenames = ["1-niagaraSection.csv",
-                   "2-IroquoiaSection.csv",
-                   "3-TorontoSection.csv",
-                   "4-CaledonHillsSection.csv",
-                   "5-DufferinHi-LandSection.csv",
-                   "6-AdventureSection.csv",
-                   "7-BeaverValleySection.csv",
-                   "8-SydenhamSection.csv",
-                   "9-PeninsulaSection.csv"]
+coord_filenames = [
+    "1-niagaraSection.csv",
+    "2-IroquoiaSection.csv",
+    "3-TorontoSection.csv",
+    "4-CaledonHillsSection.csv",
+    "5-DufferinHi-LandSection.csv",
+    "6-AdventureSection.csv",
+    "7-BeaverValleySection.csv",
+    "8-SydenhamSection.csv",
+    "9-PeninsulaSection.csv",
+]
 parent_dir = pathlib.Path(__file__).parent.resolve()
 cords = []
 
 
 def distance(lat1: float, lon1: float, lat2: float, lon2: float) -> float:
-    p = pi/180
-    a = 0.5 - cos((lat2-lat1)*p)/2 + cos(lat1*p) * cos(lat2*p) * (1-cos((lon2-lon1)*p))/2
+    p = pi / 180
+    a = 0.5 - cos((lat2 - lat1) * p) / 2 + cos(lat1 * p) * cos(lat2 * p) * (1 - cos((lon2 - lon1) * p)) / 2
     # 2*R*asin...
     return 12742.0144 * asin(sqrt(a))
 
@@ -40,12 +42,12 @@ def calc_distance(vertices) -> float:
 
 
 for coord_file in coord_filenames:
-    with open(os.path.join(parent_dir, "../coordinateFiles", coord_file), newline='') as csv_file:
+    with open(os.path.join(parent_dir, "../coordinateFiles", coord_file), newline="") as csv_file:
         coord_reader = csv.DictReader(csv_file)
 
         for coord in coord_reader:
-            lat = float(coord['Latitude'])
-            long = float(coord['Longitude'])
+            lat = float(coord["Latitude"])
+            long = float(coord["Longitude"])
             cords.append((lat, long))
 
 total_distance = calc_distance(cords)
@@ -69,7 +71,7 @@ def get_polyline_from_coord(start_latitude: float, start_longitude: float, end_l
     start_idx = cords.index((start_latitude, start_longitude))
     end_idx = cords.index((end_latitude, end_longitude))
 
-    poly_cords = cords[start_idx: end_idx+1]
+    poly_cords = cords[start_idx : end_idx + 1]
 
     dis = 0
     p_cord = None
@@ -89,7 +91,7 @@ def calc_polys_distances(hikes: []):
         start_idx = cords.index((hike.startLat, hike.startLong))
         end_idx = cords.index((hike.endLat, hike.endLong))
 
-        hiked_cords.append(cords[start_idx:end_idx+1])
+        hiked_cords.append(cords[start_idx : end_idx + 1])
 
     unique_paths = set()
     hiked_distance = 0
@@ -118,14 +120,8 @@ def get_polylines():
         completed_dis, completed_poly = calc_polys_distances(hikes)
 
     resp = {
-        "completed": {
-            "polyline": completed_poly,
-            "distance": completed_dis
-        },
-        "total": {
-            "polyline": polyline.encode(cords),
-            "distance": total_distance
-        }
+        "completed": {"polyline": completed_poly, "distance": completed_dis},
+        "total": {"polyline": polyline.encode(cords), "distance": total_distance},
     }
 
     return resp
